--- a/Index.html
+++ b/Index.html
@@ -294,7 +294,6 @@
 
 <!-- Overlay oscuro -->
 <div id="overlay">
-  <img id="overlay-logo" src="Imagenes/LogoLaRancha.png" alt="Logo" />
   <div id="button-container">
     <button id="restart-button">Reiniciar</button>
     <button id="artbook-button">Mira nuestro ArtBook</button>
@@ -712,7 +711,7 @@ function createBottomButtons() {
       vueltasButton.style.bottom = "35%"; // Separación desde el borde superior
       vueltasButton.style.left = "50%";
       vueltasButton.style.backgroundColor = "transparent";
-      vueltasButton.style.borderColor = "red";
+      vueltasButton.style.borderColor = "none";
       vueltasButton.style.transform = "translateX(-50%)"; // Centrar horizontalmente
       vueltasButton.style.padding = "60px 70px";
       vueltasButton.style.fontSize = "0px";
