--- a/Index.html
+++ b/Index.html
@@ -711,7 +711,7 @@ function createBottomButtons() {
       vueltasButton.style.bottom = "35%"; // Separación desde el borde superior
       vueltasButton.style.left = "50%";
       vueltasButton.style.backgroundColor = "transparent";
-      vueltasButton.style.borderColor = "none";
+      vueltasButton.style.border = "none";
       vueltasButton.style.transform = "translateX(-50%)"; // Centrar horizontalmente
       vueltasButton.style.padding = "60px 70px";
       vueltasButton.style.fontSize = "0px";
